--- a/charts/heatmaps.ipynb
+++ b/charts/heatmaps.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "004708f0-307d-487f-9a39-abada3694dac",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Heatmaps\n",
     "<img src=\"img/heatmap-logo.png\" style=\"float: right; padding-left: 1em;\"></img>\n",
@@ -16,8 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0b323ba1-15da-41d7-a6fa-bf57cde7b6fd",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import chromedriver_binary\n",
@@ -31,7 +47,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0872bd01-a04f-428c-a5bf-5cade0c85fb2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## ‘Deployed Versions’ Heatmap with Altair\n",
     "\n",
@@ -42,8 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c21a68e3-a6fd-4e36-8057-ccba88e20838",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from dfply import *\n",
@@ -60,15 +92,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "be9c3957-bfb2-4dde-94b3-289ecc4f61bb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "The `tvc` dataframe holds counts per team and version, including a normalized `Percent` column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a2ffeeca-c11f-41b6-bf71-9f2ef5916333",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "tvc = data.groupby(['Team', 'Version']).count()\n",
@@ -85,7 +133,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a9b21edb-4ec8-4af9-9470-da0797c4540c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "**TODO** Explain:\n",
     "\n",
@@ -98,8 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5dc0ec13-eaa8-40f6-a36c-8f77f45a349f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "versions_ordered = list(sorted(set(tvc['Version']), \n",
@@ -127,9 +191,36 @@
     "#render_chart(chart, 'installs_by_team_heatmap', scale_factor=0 or 1350 / 520)\n",
     "chart"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b4d907ed-03c0-432a-9f28-9b637cf2b1bf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "1"
+   ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
+   "notebookName": "heatmaps",
+   "notebookOrigID": 3102685337479744,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -149,5 +240,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
