--- a/charts/sunburst.ipynb
+++ b/charts/sunburst.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "431d00fd-1570-4ff6-8e6e-f1c459530850",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Sunburst Charts\n",
     "<img src=\"img/sunburst-logo.png\" style=\"float: right; padding-left: 1em;\"></img>\n",
@@ -16,8 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "28811f8d-efbb-4554-a123-3b76e5142fc4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
@@ -54,39 +70,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "12726df3-b05c-4fd2-88cd-fea1fcf0aab3",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "This code creates a dataframe with the percentages and a multi-index of the paths."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               percent\n",
-      "0 1    2         3                    \n",
-      "/                                  100\n",
-      "  home                              70\n",
-      "       Images                       40\n",
-      "       Videos                       20\n",
-      "       Documents                     5\n",
-      "  usr                               15\n",
-      "       src                           6\n",
-      "                 linux-headers       4\n",
-      "                 virtualbox          1\n",
-      "       lib                           4\n",
-      "       share                         2\n",
-      "       bin                           1\n",
-      "       local                         1\n",
-      "       include                       1\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "52f61afb-091e-48d6-b218-18ef1d05742d",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "def to_frame(data, path=()):\n",
     "    \"\"\"Generate dataframe rows from nested data.\"\"\"\n",
@@ -103,7 +112,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f3cfbe5e-184f-477b-bc95-01d59a5ca5d5",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Using matplotlib\n",
     "\n",
@@ -112,8 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "33100253-6e43-4b89-9abd-0f80fdd04276",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def sunburst(nodes, total=np.pi * 2, offset=0, level=0, ax=None,\n",
@@ -158,30 +183,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "549dc416-2179-45c7-b683-90f064d245d7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Using that function, we plot the disk usage data defined previously."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/sunburst-plt.png?1552230729.4666991\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "49ed291a-c808-42ff-b3ef-7978d9043f49",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "plt.rcParams[\"figure.figsize\"] = (11,) * 2\n",
     "sunburst(data)\n",
@@ -195,13 +222,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bd0406a2-f394-4071-8f6e-6cef528ad590",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "See also the similar [donut plot with subgroups](https://python-graph-gallery.com/163-donut-plot-with-subgroups/)."
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "sunburst",
+   "notebookOrigID": 3102685337479799,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -221,5 +264,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
