--- a/charts/wordcloud.ipynb
+++ b/charts/wordcloud.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8e556f10-9e2a-4f6a-9a98-307aab3e20db",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Word Clouds\n",
     "<img src=\"img/wordcloud-logo.png\" style=\"float: right; width: 240px; padding-left: 1em;\"></img>\n",
@@ -21,7 +29,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6eb2e7f1-300a-4f17-8e20-0f64fadff97b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Setting the stage\n",
     "\n",
@@ -32,8 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f37597e6-2034-4ff6-8a29-6d0a1e27ab4d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -52,7 +76,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0d4d90ba-0a9f-42bd-b8b7-a4ec254ce4d6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Loading a word list or text\n",
     "\n",
@@ -61,35 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4eb66bfb-2da5-4b6d-9d5c-754c39e65a9a",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Pandas', 9),\n",
-       " ('NumPy', 6),\n",
-       " ('Dataframe', 5),\n",
-       " ('Time series', 5),\n",
-       " ('Python', 4),\n",
-       " ('Data Science', 3),\n",
-       " ('Statistics', 3),\n",
-       " ('Data Analysis', 2),\n",
-       " ('Data Structures', 1),\n",
-       " ('Mutability', 1),\n",
-       " ('Tool', 1),\n",
-       " ('flexible', 1),\n",
-       " ('expressive', 1),\n",
-       " ('Tabular', 1)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('../data/wordcloud.txt') as handle:\n",
     "    words = [x.strip() for x in handle]\n",
@@ -98,7 +113,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9993c9fa-f084-4437-a90d-493da557b377",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Rendering the word cloud\n",
     "\n",
@@ -107,25 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cf992ac7-45ba-4592-9372-2dae986bf838",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/wordcloud.png?1556885791.470097\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random.shuffle(words)\n",
     "wordcloud = WordCloud(\n",
@@ -145,7 +161,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e8db86a9-07f9-40a6-aefd-d9a8bb6139ff",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "The above code uses this image mask to give the word ‘cloud’ a specific shape.\n",
     "\n",
@@ -156,8 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7adbd8ac-4680-4cd6-8adf-bd0e1f390594",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# execute this cell for docs\n",
@@ -166,8 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2ab41595-94a8-4773-8730-7884b7135044",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -178,6 +217,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "wordcloud",
+   "notebookOrigID": 3102685337479866,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -197,5 +244,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
