--- a/complete-scenarios/devops-intelligence.ipynb
+++ b/complete-scenarios/devops-intelligence.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d6bf4024-f4ad-4c8d-98b0-74fd3c09ac4a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# JupyterHub Showcase: DevOps Intelligence\n",
     "\n",
@@ -20,7 +28,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "199d32ef-6caf-47af-9c6b-00d4e2027b2b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Typical Use-Cases\n",
     "\n",
@@ -33,7 +49,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0e4ea2a8-a961-4254-9775-3245be4d0f4b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Platform Architecture\n",
     "\n",
@@ -44,14 +68,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "15d2e954-d002-4a5e-becc-31f481918bdf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "> ![DevOps Intelligence Architecture](https://github.com/1and1/debianized-jupyterhub/raw/master/docs/_static/img/devops-intelligence.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "af6e2495-80a3-45e5-9c31-1bf5104ba984",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "To make such a deployment easy, the [1and1/debianized-jupyterhub](https://github.com/1and1/debianized-jupyterhub#jupyterhub-debian-packaging) project provides a JupyterHub service including a fully equipped Python3 kernel as a single Debian package – only Python3, NodeJS, and Chromium packages must be installed in addition to the `jupyterhub` one. If you raised an eyebrow on Chromium being in that list, it's used by JavaScript-based visualization frameworks to render PNG images.\n",
     "\n",
@@ -60,7 +100,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1c978e46-5e6e-442d-9c15-65291205c709",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Use-Case: Migration Reporting\n",
     "\n",
@@ -69,7 +117,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e51cafdd-aceb-4c49-a3a2-88bd9883dd13",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "What follows is an excerpt from a productive notebook, with anonymized data about [AdoptOpenJDK](https://adoptopenjdk.net/) deployments. That data was originally retrieved from a system called *“Patch Management Reporting”*, which collects information about installed packages for all hosts in the data center. We're in the yellow *“Data Sources”* box of the above figure here.\n",
     "\n",
@@ -78,33 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "♯ of Records: 104\n",
-      "\n",
-      "Distribution = ['Debian 8.10', 'Debian 8.11', 'Debian 8.6', 'Debian 8.9', 'Debian 9.6', 'Debian 9.7', 'Debian 9.8']\n",
-      "Architecture = ['amd64']\n",
-      "Environment = ['--', 'DEV', 'LIVE', 'QA']\n",
-      "Team = ['Team Blue', 'Team Green', 'Team Red', 'Team Yellow']\n",
-      "Installed version = ['11.0.2.9-83(amd64)', '11.0.2.9-85(amd64)', '8.202.b08-66(amd64)', '8.202.b08-83(amd64)', '8.202.b08-85(amd64)']\n",
-      "\n",
-      "                                    0                   1                   2\n",
-      "CMDB_Id                     108380195           298205230           220678839\n",
-      "Distribution              Debian 8.11          Debian 9.6         Debian 8.11\n",
-      "Architecture                    amd64               amd64               amd64\n",
-      "Environment                       DEV                  --                 DEV\n",
-      "Team                         Team Red            Team Red            Team Red\n",
-      "Last seen            2019-03-18 06:42    2019-03-18 06:42    2019-03-18 06:42\n",
-      "Last modified        2019-03-18 06:42    2019-03-18 06:42    2019-03-18 06:42\n",
-      "Installed version  11.0.2.9-83(amd64)  11.0.2.9-83(amd64)  11.0.2.9-83(amd64)\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "18543fb5-a5b5-42f8-8c0e-0a360660eb83",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -121,15 +161,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25d9e0a8-0f29-4ec1-9b4b-10272298a544",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Next comes the usual data cleanup. The `Distribution` column is a bit diverse, and not everyone has Debian codenames and associated major versions memorized. The `map_distro` function fixes that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c49950f-14cf-4b13-a0f7-bd610a973ccf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def map_distro(name):\n",
@@ -149,36 +205,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "16c5c08b-01e3-414b-9438-e59757a06b4e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Together with other cleanup steps, the mapper function is applied in a [dfply](https://towardsdatascience.com/dplyr-style-data-manipulation-with-pipes-in-python-380dcb137000) pipeline. The result can be controlled by showing a sample of data points with unique version numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       0            13            14            62  \\\n",
-      "Distribution   Jessie [8]  Stretch [9]    Jessie [8]   Stretch [9]   \n",
-      "Architecture        amd64        amd64         amd64         amd64   \n",
-      "Environment           DEV          N/A           DEV           DEV   \n",
-      "Team             Team Red    Team Blue      Team Red     Team Blue   \n",
-      "Version       11.0.2.9-83  11.0.2.9-85  8.202.b08-83  8.202.b08-85   \n",
-      "\n",
-      "                        68  \n",
-      "Distribution    Jessie [8]  \n",
-      "Architecture         amd64  \n",
-      "Environment            DEV  \n",
-      "Team             Team Blue  \n",
-      "Version       8.202.b08-66  \n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8c103170-0055-4131-a2e6-8a37eb42c980",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from dfply import *\n",
     "\n",
@@ -195,28 +247,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1b663319-ddcb-4afc-85c5-cb6969c678eb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Time to present the cleaned up data, starting with a table of teams and their number of installed packages. In the production notebook, an API of the corporate identity management is used to enrich the table with contact data of the team leads. Having the organizational data available also makes it possible to filter or aggregate the data by business units."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Team  Count\n",
-      "0    Team Blue     42\n",
-      "1   Team Green     16\n",
-      "2     Team Red     45\n",
-      "3  Team Yellow      1\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8926ec97-686d-40d3-a2f7-3697b5eb28f9",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "counts = cleaned.groupby(['Team']).size()\n",
     "print(counts.reset_index(name='Count'))"
@@ -224,27 +280,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e84ff887-9a54-4263-9426-6d0825d2d4dc",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "To create a heatmap of how diverse a team's version spectrum is, we calculate percentages of versions per team."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Team       Version  Count    Percent\n",
-      "0  Team Blue   11.0.2.9-85      1   2.380952\n",
-      "1  Team Blue  8.202.b08-66      1   2.380952\n",
-      "2  Team Blue  8.202.b08-85     40  95.238095\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c9319e1-f864-4ed6-92d9-badb76a58669",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "percentage = cleaned.groupby(['Team', 'Version']).size().reset_index(name='Count')\n",
     "percentage = percentage.assign(Percent=\n",
@@ -254,30 +315,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e2b117be-728d-4958-8b5f-709ec1fa2a9e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "[HoloViews](http://holoviews.org/) makes creating the heatmap including a label overlay a breeze."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/aoj-heatmap.png?1553270693.777642\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e006a75f-ab4c-42c2-964f-38c46aa23c23",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import holoviews as hv\n",
     "hv.extension('bokeh')\n",
@@ -319,14 +382,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6750b55a-601a-4389-9574-63e8bd2dae3c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "From the heatmap, you can easily glance whether a team uses predominantly one version, and how recent the used versions are."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9ad5007e-f72d-4287-82c7-fbd764933f29",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Conclusion\n",
     "\n",
@@ -335,6 +414,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "devops-intelligence",
+   "notebookOrigID": 3102685337479740,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -354,5 +441,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
