--- a/how-tos/cleanup.ipynb
+++ b/how-tos/cleanup.ipynb
@@ -2,14 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "341ae42c-f3a9-4557-9343-3dae9778b743",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Tips for Cleaning up Raw Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d0468627-0dfd-4791-8260-143faff7d936",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Detecting and Filling in Missing Data\n",
     "\n",
@@ -18,34 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "829efef5-b5c6-4228-9fac-49831c3b926c",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               song       artist  year\n",
-      "0  Caught Up in You  .38 Special  1982\n",
-      "1      Fantasy Girl  .38 Special   NaN\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/missingno.png?1552277822.004438\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib notebook\n",
     "\n",
@@ -71,7 +71,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c0052d7f-ed90-426e-b3c3-c7846ac5b52b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "As you can (literally) see, the `year` values are hit and miss.\n",
     "\n",
@@ -80,6 +88,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "cleanup",
+   "notebookOrigID": 3102685337479737,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -99,5 +115,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
