--- a/how-tos/data-pipes.ipynb
+++ b/how-tos/data-pipes.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d92f6829-cdb8-4b9b-8dad-9071ea37f0d7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Using R-style Data Pipelines in Notebooks\n",
     "\n",
@@ -17,8 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "50fb9ab0-e1a5-47aa-8999-1b551188f2ea",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -29,125 +44,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "05cbcbb4-3fac-45b9-9cdd-c720d01482ac",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "The sample data (about OS package deployments) is read into the `raw_data` dataframe from a CSV file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "♯ of Records: 146\n",
-      "\n",
-      "Distribution = ['Debian 8.11', 'Debian 8.6', 'Debian 8.9', 'jessie']\n",
-      "Architecture = ['amd64']\n",
-      "Environment = ['', 'Canary', 'DEV', 'LIVE', 'QA']\n",
-      "Team = ['Automation', 'Big Data', 'Email', 'Ops App1', 'Ops Linux', 'Persistence', 'Platform']\n",
-      "Installed version = ['42.28-2(amd64)', '42.44-1(amd64)']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CMDB_Id</th>\n",
-       "      <td>274656589</td>\n",
-       "      <td>153062618</td>\n",
-       "      <td>282201163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Distribution</th>\n",
-       "      <td>jessie</td>\n",
-       "      <td>jessie</td>\n",
-       "      <td>jessie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Architecture</th>\n",
-       "      <td>amd64</td>\n",
-       "      <td>amd64</td>\n",
-       "      <td>amd64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Environment</th>\n",
-       "      <td>DEV</td>\n",
-       "      <td>DEV</td>\n",
-       "      <td>LIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Team</th>\n",
-       "      <td>Ops App1</td>\n",
-       "      <td>Ops App1</td>\n",
-       "      <td>Ops App1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Last seen</th>\n",
-       "      <td>2019-02-18 11:43</td>\n",
-       "      <td>2019-02-18 11:56</td>\n",
-       "      <td>2019-02-18 12:04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Last modified</th>\n",
-       "      <td>2019-02-18 11:43</td>\n",
-       "      <td>2019-02-18 11:56</td>\n",
-       "      <td>2019-02-18 12:04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Installed version</th>\n",
-       "      <td>42.28-2(amd64)</td>\n",
-       "      <td>42.28-2(amd64)</td>\n",
-       "      <td>42.28-2(amd64)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  0                 1                 2\n",
-       "CMDB_Id                   274656589         153062618         282201163\n",
-       "Distribution                 jessie            jessie            jessie\n",
-       "Architecture                  amd64             amd64             amd64\n",
-       "Environment                     DEV               DEV              LIVE\n",
-       "Team                       Ops App1          Ops App1          Ops App1\n",
-       "Last seen          2019-02-18 11:43  2019-02-18 11:56  2019-02-18 12:04\n",
-       "Last modified      2019-02-18 11:43  2019-02-18 11:56  2019-02-18 12:04\n",
-       "Installed version    42.28-2(amd64)    42.28-2(amd64)    42.28-2(amd64)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c3dbd7d7-998d-4673-bf6a-d60bce459bda",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "raw_data = pd.read_csv(\"../data/cmdb-packages.csv\", sep=',')\n",
     "\n",
@@ -162,8 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c7bcb486-4fed-41ec-bfbb-158958eed027",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def map_distro(name):\n",
@@ -183,7 +113,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "45bd0edc-4f74-43bf-b32f-7df3049b0e9a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Data Cleaning With Pandas\n",
     "\n",
@@ -196,78 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>62</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Distribution</th>\n",
-       "      <td>Jessie [8]</td>\n",
-       "      <td>Jessie [8]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Architecture</th>\n",
-       "      <td>amd64</td>\n",
-       "      <td>amd64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Environment</th>\n",
-       "      <td>DEV</td>\n",
-       "      <td>DEV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Team</th>\n",
-       "      <td>Ops App1</td>\n",
-       "      <td>Platform</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Version</th>\n",
-       "      <td>42.28</td>\n",
-       "      <td>42.44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      0           62\n",
-       "Distribution  Jessie [8]  Jessie [8]\n",
-       "Architecture       amd64       amd64\n",
-       "Environment          DEV         DEV\n",
-       "Team            Ops App1    Platform\n",
-       "Version            42.28       42.44"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "86769623-e1a8-4d8a-80ea-f9ddd5a7d9dd",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "data = raw_data\n",
     "data = data.assign(Version=data['Installed version'].str.split('-', 1, expand=True)[0])\n",
@@ -281,7 +158,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0f237162-f156-449a-9976-83b001793645",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Data Cleaning With Pipelines\n",
     "\n",
@@ -294,78 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>62</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Distribution</th>\n",
-       "      <td>Jessie [8]</td>\n",
-       "      <td>Jessie [8]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Architecture</th>\n",
-       "      <td>amd64</td>\n",
-       "      <td>amd64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Environment</th>\n",
-       "      <td>DEV</td>\n",
-       "      <td>DEV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Team</th>\n",
-       "      <td>Ops App1</td>\n",
-       "      <td>Platform</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Version</th>\n",
-       "      <td>42.28</td>\n",
-       "      <td>42.44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      0           62\n",
-       "Distribution  Jessie [8]  Jessie [8]\n",
-       "Architecture       amd64       amd64\n",
-       "Environment          DEV         DEV\n",
-       "Team            Ops App1    Platform\n",
-       "Version            42.28       42.44"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d1b3d4af-cc54-4b81-a0ba-71ecaacff936",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from dfply import *\n",
     "\n",
@@ -382,14 +206,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "acf2c669-7090-4edc-b0cd-8834367addd2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Read the [dplyr-style Data Manipulation with Pipes in Python](https://towardsdatascience.com/dplyr-style-data-manipulation-with-pipes-in-python-380dcb137000) blog post for more examples."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0248d2a6-53ff-4c3d-904f-d3602b9605d6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## References\n",
     "\n",
@@ -404,6 +244,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "data-pipes",
+   "notebookOrigID": 3102685337479746,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -423,5 +271,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
