--- a/how-tos/git.ipynb
+++ b/how-tos/git.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "713b1dd6-7444-476c-a05a-c2fa5381df36",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Using git with Jupyter Notebooks\n",
     "\n",
@@ -11,7 +19,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f9736536-abcd-405a-b476-8a152e516ffa",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Committing Clean Notebooks Manually\n",
     "\n",
@@ -22,7 +38,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c825f2fd-8e7d-4242-bf1f-db21c43e4a04",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Pushing Text-Only Notebooks\n",
     "\n",
@@ -39,36 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "26afa39e-e518-461f-a8d8-2ecf9d9d9566",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   dataset     x     y\n",
-      "0        I  10.0  8.04\n",
-      "11      II  10.0  9.14\n",
-      "22     III  10.0  7.46\n",
-      "33      IV   8.0  6.58\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/seaborn-lmplot.png?1553935796.8190546\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib notebook\n",
     "\n",
@@ -90,7 +96,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bd9562ac-b05d-45e9-a9bf-87d0ce279ea6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## git Hook Configuration\n",
     "\n",
@@ -99,6 +113,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "git",
+   "notebookOrigID": 3102685337479801,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -118,5 +140,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
