--- a/how-tos/timeseries.ipynb
+++ b/how-tos/timeseries.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "66d27b4e-da6f-4e48-9181-d6dcdc86448a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Pandas Timeseries\n",
     "\n",
@@ -14,8 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "890bccd9-21a6-44b3-b01a-cf5315472b4b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -23,7 +39,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bdaca964-de29-4c57-9f99-9e6d3f12b3da",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Creating Timeseries\n",
     "\n",
@@ -34,25 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "61736592-6f8a-4093-8044-d48c626fc6cd",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2019-01-31', '2019-02-28', '2019-03-29', '2019-04-30',\n",
-       "               '2019-05-31', '2019-06-28', '2019-07-31', '2019-08-30',\n",
-       "               '2019-09-30', '2019-10-31', '2019-11-29', '2019-12-31'],\n",
-       "              dtype='datetime64[ns]', freq='BM')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "year = '2019'\n",
     "ts = pd.date_range(year, periods=12, freq='BM')\n",
@@ -61,25 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b270031a-6b04-4528-a89a-254a5622193e",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     2019-01-31 2019-02-28 2019-03-29 2019-04-30 2019-05-31 2019-06-28\n",
-      "DoW    Thursday   Thursday     Friday    Tuesday     Friday     Friday\n",
-      "BM≠M          ☓          ☓          ✔          ☓          ☓          ✔\n",
-      "\n",
-      "     2019-07-31 2019-08-30 2019-09-30 2019-10-31 2019-11-29 2019-12-31\n",
-      "DoW   Wednesday     Friday     Monday   Thursday     Friday    Tuesday\n",
-      "BM≠M          ☓          ✔          ☓          ☓          ✔          ☓\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(index=ts)\n",
     "df['DoW'] = df.index.weekday_name\n",
@@ -92,14 +102,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "895aeb6a-7b0b-40fa-a726-ac1f4938c5ea",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Generated sequences like this can be used to filter or bin time series data, or create ‘nice’ (i.e. semantically meaningful) axis labels for a graph."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "823918a7-c981-4aaf-8325-d308a3236df4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Relative Date & Time Offsets\n",
     "To get a series like “first Thursday in the second week of each month”, you can add [DateOffset Objects](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects) like this:"
@@ -107,67 +133,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/venvs/jupyterhub/lib/python3.6/site-packages/pandas/core/arrays/datetimes.py:743: PerformanceWarning: Non-vectorized DateOffset being applied to Series or DatetimeIndex\n",
-      "  \"or DatetimeIndex\", PerformanceWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2019-01-10', '2019-02-14', '2019-03-14', '2019-04-11',\n",
-       "               '2019-05-09', '2019-06-13', '2019-07-11', '2019-08-08',\n",
-       "               '2019-09-12', '2019-10-10', '2019-11-14', '2019-12-12'],\n",
-       "              dtype='datetime64[ns]', freq='WOM-2THU')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6e48d82f-34f5-49bd-a9c8-724ebccce7b9",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "pd.date_range(year, periods=12, freq='MS') + pd.DateOffset(weeks=1, weekday=3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d38ec809-f59d-4f88-be7c-ad6c31bb6e21",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "This works, but you'll get an ugly `PerformanceWarning` about non-vectorized application of a `DateOffset`. However, as you can see above, the resulting `DatetimeIndex` tells you the proper `freq` string to use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2019-01-10', '2019-02-14', '2019-03-14', '2019-04-11',\n",
-       "               '2019-05-09', '2019-06-13', '2019-07-11', '2019-08-08',\n",
-       "               '2019-09-12', '2019-10-10', '2019-11-14', '2019-12-12'],\n",
-       "              dtype='datetime64[ns]', freq='WOM-2THU')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9077273b-68df-4868-9710-7b24d783a4a7",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "pd.date_range(year, periods=12, freq='WOM-2THU')"
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "timeseries",
+   "notebookOrigID": 3102685337479884,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -187,5 +209,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
