--- a/setup/configuration.ipynb
+++ b/setup/configuration.ipynb
@@ -2,14 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "da279115-be79-46b5-81ee-fae37dd38ae5",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Jupyter and IPython Configuration Tips"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "28b5e911-4e78-4b71-9ebc-d910b2f68914",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Enabling the Host's Certificates\n",
     "\n",
@@ -29,7 +45,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "41ff3211-0f08-47de-bee7-3f88fc64f9c9",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## How to Provide Your Own Personal CSS\n",
     "\n",
@@ -45,7 +69,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0363ac76-beae-4e29-ab7d-822efb07f8f7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Embedded Dependency Installation\n",
     "\n",
@@ -61,7 +93,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "073ea026-9ddc-40f6-8375-e0f23dd3b529",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Install & Import Mechanics\n",
     "The following code is pure boilerplate to provide the `require` function. In production environments, you probably want to have this in your underlying configuration, or as a custom `%require` magic."
@@ -69,18 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: PIP_INDEX_URL=https://pypi.org/pypi\n",
-      "env: PIP_PREFIX=~/.ipython\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "465c4017-4387-4e0f-92dc-15906b30f6b2",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%env PIP_INDEX_URL=https://pypi.org/pypi\n",
     "%env PIP_PREFIX=~/.ipython\n",
@@ -122,42 +161,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7265765c-a1ef-4878-b88d-6b2a63e43eaf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "This code shows the extended Python search path with the user-specific `site-packages` directory upfront."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚠ Using already installed 'sys' package.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['~/.ipython/lib/python3.6/site-packages',\n",
-       " '/opt/venvs/jupyterhub/lib/python36.zip',\n",
-       " '/opt/venvs/jupyterhub/lib/python3.6',\n",
-       " '/opt/venvs/jupyterhub/lib/python3.6/lib-dynload',\n",
-       " '/usr/lib/python3.6',\n",
-       " '',\n",
-       " '/opt/venvs/jupyterhub/lib/python3.6/site-packages',\n",
-       " '/opt/venvs/jupyterhub/lib/python3.6/site-packages/IPython/extensions',\n",
-       " '~/.ipython']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7018e5f5-dfe6-4408-a7c9-e1374bed5136",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "def prettify(path):\n",
     "    import os\n",
@@ -169,7 +198,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "52849518-f11b-49fb-bd36-9e089da28417",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Defining & Using Requirements\n",
     "Given the above code is executed once in a kernel, you can now replace a normal import with a `require` call, and the specified package is installed if not available yet."
@@ -177,27 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"<module 'distro' from '~/.ipython/lib/python3.6/site-packages/distro.py'>\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "41bbb92d-44f3-4408-bb2b-823bc9b59dbd",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "require('distro>=1.4', 'do', pkgname='distro')\n",
     "prettify(repr(do))"
@@ -205,37 +232,46 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f924004b-e34c-420d-9054-bd79c8c05806",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Finally, just use the package as usual."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': 'ubuntu',\n",
-       " 'version': '18.04',\n",
-       " 'version_parts': {'major': '18', 'minor': '04', 'build_number': ''},\n",
-       " 'like': 'debian',\n",
-       " 'codename': 'bionic'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9178af5c-16e4-4395-997e-5474e8dd3203",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "do.info()"
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "configuration",
+   "notebookOrigID": 3102685337479794,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -255,5 +291,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
