--- a/visualization/altair.ipynb
+++ b/visualization/altair.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "022ffe9a-502f-4f1a-ab78-d6851e02a11f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Data Visualization with Altair / Vega\n",
     "\n",
@@ -27,8 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "80d278c2-a373-4a15-b151-b855c12878fc",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import altair as alt\n",
@@ -39,7 +55,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4100aa05-3cda-497b-81c7-4cdf45239773",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Note that this is not necessary with JupyterLab.\n",
     "\n",
@@ -50,8 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3307f346-55e5-4fed-929f-499b2de482f9",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -63,25 +95,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4b458a03-9ea8-444c-81c8-2b5afc011890",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "A more automated way uses the [chromedriver-binary](https://pypi.org/project/chromedriver-binary/) PyPI package to do the downloading of the binary. Assuming you have installed that package into your runtime environment, all you need to do is import it, which extends your `PATH` so the driver binary is found at runtime."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/venvs/jupyterhub/lib/python3.6/site-packages/chromedriver_binary\n",
-      "-rwxr-xr-x 1 root root 12M Feb 21 12:24 /opt/venvs/jupyterhub/lib/python3.6/site-packages/chromedriver_binary/chromedriver\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2ae15394-5637-4314-8541-e32e3f6bfd43",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import chromedriver_binary\n",
     "!echo $PATH | tr : \\\\n | grep chrome\n",
@@ -90,7 +129,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6f2b0936-9f74-411e-95fb-9ac07502e8cd",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Publishing Charts with `nbconvert`\n",
     "\n",
@@ -101,23 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/ascii_bars.png?1550494212.826586\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "be02c3d5-642f-4d70-b069-0f185ccd248b",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import altair as alt\n",
@@ -148,6 +189,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "altair",
+   "notebookOrigID": 3102685337479807,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -167,5 +216,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
