--- a/visualization/bokeh.ipynb
+++ b/visualization/bokeh.ipynb
@@ -2,18 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b56c464f-6b60-4110-95b4-ed9878c179f4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Data Visualization with Bokeh\n",
     "\n",
     "[Bokeh](https://bokeh.pydata.org/) is an interactive visualization library that targets modern web browsers for presentation. Its goal is to provide elegant, concise construction of versatile graphics, and to extend this capability with high-performance interactivity over very large or streaming datasets. Bokeh can help anyone who would like to quickly and easily create interactive plots, dashboards, and data applications.\n",
     "\n",
-    "See [Jupyter Notebooks](https://bokeh.pydata.org/en/latest/docs/user_guide/quickstart.html#jupyter-notebooks) in the user guide regarding details of using Bokeh within Jupyter. Also consider the [bokeh-notebooks](https://github.com/bokeh/bokeh-notebooks) project, offering examples and a tutorial to get you started. "
+    "See [Jupyter Notebooks](https://bokeh.pydata.org/en/latest/docs/user_guide/quickstart.html#jupyter-notebooks) in the user guide regarding details of using Bokeh within Jupyter. Also consider the [bokeh-notebooks](https://github.com/bokeh/bokeh-notebooks) project, offering examples and a tutorial to get you started."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0dd169ed-4e38-4feb-96f5-762bedaa0eca",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Bokeh Global Configuration\n",
     "\n",
@@ -24,17 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: BOKEH_PHANTOMJS_PATH=/opt/venvs/jupyterhub/lib/python3.6/site-packages/phantomjs_bin/bin/linux/phantomjs\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "93610a4b-6dbb-43ee-9683-fae7ae6d64f9",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Use inline resources (no use of the CDN)\n",
     "##%env BOKEH_RESOURCES=inline\n",
@@ -54,15 +70,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0e2d41d7-06c9-4ea8-a879-5b4e87a8270f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Like in the *Altair* notebook, we define a function that helps producing PNG chart images. You need to install PhantomJS for this (e.g. `pip install phantomjs-binary`), and point the `BOKEH_PHANTOMJS_PATH` environment variable to the `phantomjs` executable file. We did just that in the initialization code above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2a5f3b3d-aa29-42ca-847d-263808dc3160",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def render_chart(chart, name, scale_factor=1.0, ext='png', publish=1):\n",
@@ -83,30 +115,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e26131f6-476d-4ba1-bd2d-6b9f1c37ea11",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## A Sample Plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/bokeh_iris.png?1551019917.356873\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4430b7e0-9e5e-48e2-8279-52535432c3db",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from bokeh.plotting import figure, show, output_file\n",
     "from bokeh.sampledata.iris import flowers\n",
@@ -128,6 +162,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "bokeh",
+   "notebookOrigID": 3102685337479743,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -147,5 +189,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
