--- a/visualization/seaborn.ipynb
+++ b/visualization/seaborn.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "45ee582d-37ba-49c1-89b3-e15f5cbb80e1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Data Visualization with Seaborn\n",
     "\n",
@@ -11,7 +19,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0328fb27-5781-46a0-852c-cfe5478d3a09",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## XKCD-style Sample Plot\n",
     "\n",
@@ -20,25 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "04219367-16ec-4101-b728-7eae28b5d0a6",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/seaborn-xkcd.png?1551637309.4687605\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib notebook\n",
     "\n",
@@ -65,6 +74,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "seaborn",
+   "notebookOrigID": 3102685337479745,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -84,5 +101,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
