--- a/visualization/plotnine.ipynb
+++ b/visualization/plotnine.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f0391f5c-29d8-45c6-b2f9-07cff3ab9290",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Data Visualization with plotnine\n",
     "\n",
@@ -15,23 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img/plot9-scatter.png?1556357979.9507203\"></img>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7891958d-0c4f-4b72-a3ca-848abccbcdfc",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import time\n",
     "import warnings\n",
@@ -55,6 +57,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "plotnine",
+   "notebookOrigID": 3102685337479739,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -74,5 +84,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
